<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="view, banner_image, content_poster, content_title, content_release_date, rv_genre, content_tagline, label_overview, content_overview, rating_container, button_homepage" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/banner_image"
            android:layout_width="0dp"
            android:layout_height="@dimen/image_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/white_rock" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/banner_overlay"
            android:layout_width="0dp"
            android:layout_height="@dimen/image_height"
            android:background="@drawable/bg_gradient_overlay_backdrop"
            android:elevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/content_poster"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/margin_padding_size_medium"
            android:layout_marginTop="86dp"
            android:elevation="@dimen/margin_padding_size_medium"
            android:src="@color/cod_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/rating_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/rating_placeholder"
            android:elevation="18dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/content_poster"
            app:layout_constraintEnd_toEndOf="@+id/content_poster"
            app:layout_constraintStart_toStartOf="@+id/content_poster"
            tools:viewBindingIgnore="true">

            <RatingBar
                android:id="@+id/content_rb_user_score"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:theme="@style/RatingBar.Golden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_size_small"
                android:max="10"
                android:numStars="5"
                android:rating="2"
                android:stepSize="0.1" />

            <TextView
                android:id="@+id/content_number_user_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_padding_size_small"
                android:ellipsize="end"
                android:fontFamily="@font/lato"
                android:maxLines="1"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/text_size_micro"
                tools:text="@string/user_score" />

        </LinearLayout>

        <TextView
            android:id="@+id/content_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_padding_size_small"
            android:elevation="2dp"
            android:fontFamily="@font/crimson_text_bold"
            android:gravity="start"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/content_poster"
            app:layout_constraintTop_toTopOf="@+id/content_poster"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/content_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_size_small"
            android:elevation="2dp"
            android:fontFamily="@font/lato"
            android:textColor="@color/white_rock"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/content_poster"
            app:layout_constraintTop_toBottomOf="@+id/content_title"
            tools:text="@string/release_date" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_genre"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_padding_size_small"
            android:layout_marginBottom="87dp"
            app:layout_constraintBottom_toBottomOf="@+id/content_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/content_poster"
            app:layout_constraintTop_toBottomOf="@+id/banner_image"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="1"
            tools:listitem="@layout/items_text_list" />

        <TextView
            android:id="@+id/content_tagline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_size_medium"
            android:fontFamily="@font/lato"
            android:textAlignment="center"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_poster"
            tools:text="@string/tagline" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/margin_padding_size_small"
            android:background="@color/placeholder"
            app:layout_constraintTop_toBottomOf="@+id/content_overview"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/label_overview"
            style="@style/TextAppearance.MovieCatalogue.Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_tagline"
            tools:viewBindingIgnore="true" />

        <TextView
            android:id="@+id/content_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_size_medium"
            android:fontFamily="@font/lato"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_overview"
            tools:text="@string/overview" />

        <Button
            android:id="@+id/button_homepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_size_medium"
            android:text="@string/visit_homepage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_overview" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_size_small"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_size_medium"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>